[tool.poetry]
name = "satscale"
version = "0.1.0"
description = "scaling neural boolean satisfiability solving"
authors = ["Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
wandb = "^0.16.3"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
