[tool.poetry]
name = "satscale"
version = "0.1.0"
description = "scaling neural boolean satisfiability solving"
authors = ["Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.16.3"
scikit-learn = "^1.4.0"
cnfgen = "0.9.0"
networkx = "2.7.1"
numpy = "^1.22.3"
pandas = "1.4.1"
python-sat = "^0.1.7.dev16"
requests = "2.27.1"
scipy = "^1.8.0"
six = "1.16.0"
sympy = "1.10.1"
tqdm = "4.63.0"
wget = "3.2"
datasets = "^2.17.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
